--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -8,4 +8,8 @@ import Layout from "../layouts/Layout.astro";
 
 <Layout>
   <!-- <Welcome /> -->
+  <div style="background-color: red; height: 100px; width: 100%;"></div>
+  <div style="background-color: blue; height: 100px; width: 100%;"></div>
+  <div style="background-color: green; height: 100px; width: 100%;"></div>
+  <div style="background-color: yellow; height: 100px; width: 100%;"></div>
 </Layout>
