--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -1,4 +1,7 @@
-<!doctype html>
+---
+import Navbar from "../components/Navbar.astro";
+---
+
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
@@ -6,17 +9,26 @@
     <link rel="icon" type="image/svg+xml" href="/favicon.svg" />
     <meta name="generator" content={Astro.generator} />
     <title>Design Landing Page</title>
+    <style>
+      @import url("../styles/global.css");
+    </style>
   </head>
   <body>
-    <slot />
+    <div class="wrapper">
+      <Navbar />
+      <main>
+        <slot />
+      </main>
+      <footer class="blur">
+        <small>Copyright &copy; <span id="copyrightyear"></span> Desgn</small>
+      </footer>
+    </div>
+    <script>
+      // Get the current year
+      const currentYear = new Date().getFullYear();
+      // Set the copyright year in the footer
+      document.getElementById("copyrightyear")!.textContent =
+        currentYear.toString();
+    </script>
   </body>
 </html>
-
-<style>
-  html,
-  body {
-    margin: 0;
-    width: 100%;
-    height: 100%;
-  }
-</style>
