--- a/src/components/Navbar.astro
+++ b/src/components/Navbar.astro
@@ -1,69 +1,39 @@
 ---
 import { Icon } from "astro-icon/components";
-
-const props = Astro.props;
+import "../styles/global.css";
 
 const navLinks = [
-  {
-    label: "Home",
-    url: "/",
-    style: "transparent",
-  },
-  {
-    label: "Pricing",
-    url: "/about",
-    style: "transparent",
-  },
-  {
-    label: "About",
-    url: "/services",
-    style: "transparent",
-  },
-  {
-    label: "Contact Me",
-    url: "/contact",
-    style: "primary",
-  },
+  { label: "Home", url: "/", style: "transparent" },
+  { label: "Pricing", url: "/about", style: "transparent" },
+  { label: "About", url: "/services", style: "transparent" },
+  { label: "Contact Me", url: "/contact", style: "primary" },
 ];
 ---
 
 <style>
-  nav {
-    position: fixed;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 80px;
-    background-color: transparent;
-    /* box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1); */
-    z-index: 1000;
-  }
-  svg.logo {
+  .logo {
     width: 225px;
     height: auto;
-    margin-left: 20px;
-    margin-top: 10px;
+    margin-left: 3%;
   }
 </style>
 
 <nav>
-  <div class="container navcontainer">
-    <!-- Import without using Astro components -->
-    <!-- <img src="/logo.svg" alt="Logo" class="logo" width="{225}" /> -->
+  <div class="container nav-container">
     <Icon name="logo" class="logo" />
     <div class="nav-wrapper">
       <button
-        class="btn -btn--menu"
+        class="btn btn--menu"
         id="menu-btn"
         aria-label="Menu"
         aria-expanded="false"
       >
         <svg
           xmlns="http://www.w3.org/2000/svg"
-          width="24"
-          height="24"
+          style="display: block; justify-self: center;"
           viewBox="0 0 24 24"
-          {...props}
+          width="34"
+          height="34"
         >
           <path
             fill="currentColor"
@@ -74,7 +44,7 @@ const navLinks = [
       <ul class="nav-links">
         {
           navLinks.map((link) => (
-            <li class="nav-links">
+            <li role="none" style="list-style: none;">
               <a href={link.url} class={`btn btn--${link.style}`}>
                 {link.label}
               </a>
@@ -88,15 +58,10 @@ const navLinks = [
 
 <script>
   const menuBtn = document.getElementById("menu-btn");
-  //   const navLinks = document.querySelectorAll(".nav-links");
-
   if (menuBtn) {
     menuBtn.addEventListener("click", () => {
-      menuBtn.setAttribute(
-        "aria-expanded",
-        menuBtn.getAttribute("aria-expanded") === "false" ? "true" : "false"
-      );
-      //   menuBtn.classList.toggle("active");
+      const expanded = menuBtn.getAttribute("aria-expanded") === "true";
+      menuBtn.setAttribute("aria-expanded", (!expanded).toString());
     });
   }
 </script>
