--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -1,5 +1,4 @@
 @import url("https://fonts.googleapis.com/css?family=Inter:400,600");
-
 *,
 *::before,
 *::after {
@@ -57,17 +56,26 @@ body {
   overflow: hidden;
   display: grid;
   grid-template-rows: auto 1fr auto;
-  min-height: 100vh;
+  margin-top: 100px;
+  height: auto;
+}
+
+@media (max-width: 900px) {
+  .wrapper {
+    margin-top: 0;
+  }
 }
 
 main {
   display: grid;
   gap: var(--size-fluid-6);
+  /* gap: 3rem; */
   padding: var(--size-fluid-5) var(--size-fluid-2);
 }
 
-main div {
-  background-color: white;
+svg {
+  display: block;
+  margin: 0 auto;
 }
 
 .container {
@@ -140,7 +148,7 @@ main div {
 }
 
 small {
-  font-size: var(--font-size-00);
+  font-size: var(--font-size-0.4);
 }
 
 .grid-sm {
@@ -220,31 +228,63 @@ small {
   position: absolute;
   inset: 0;
   z-index: -1;
-  filter: blur(35px);
+  filter: blur(75px);
   border-radius: 50% 50% 50%;
 }
 
 .blur::after {
-  background-color: hsl(var(--accent1) / 0.2);
-  transform: rotate(-20deg);
+  background-color: hsl(var(--accent3) / 0.3);
+  transform: rotate(-8deg);
 }
 
 .blur::before {
-  background-color: hsl(var(--accent2) / 0.2);
-  transform: rotate(20deg);
+  background-color: hsl(var(--accent2) / 0.3);
+  transform: rotate(8deg);
 }
 
-@media screen (min-width: 768px) {
+@media (min-width: 768px) {
   .blur::after,
   .blur::before {
     filter: blur(120px);
   }
 }
 
+/* 2nd blur */
+
+.blur2 {
+  position: relative;
+}
+
+.blur2::after,
+.blur2::before {
+  content: "";
+  position: absolute;
+  inset: 31%; /* Smaller area = more contained circle */
+  z-index: -1;
+  filter: blur(40px);
+  border-radius: 50%; /* Fully round circle */
+}
+
+.blur2::after {
+  background-color: hsl(var(--accent3) / 0.8);
+  transform: rotate(-40deg);
+}
+
+.blur2::before {
+  background-color: hsl(var(--accent2) / 0.8);
+  transform: rotate(30deg);
+}
+
+@media (min-width: 768px) {
+  .blur2::after,
+  .blur2::before {
+    filter: blur(80px);
+  }
+}
+
 /* NAV */
 .nav-container {
   display: flex;
-  justify-content: space-between;
   align-items: center;
   padding: var(--size-fluid-2);
 }
@@ -254,6 +294,10 @@ small {
   display: flex;
   align-items: center;
   gap: var(--size-3);
+}
+
+.nav-wrapper ul.nav-links {
+  list-style: none !important;
 }
 
 .nav-links {
@@ -288,6 +332,7 @@ li[role="none"],
     display: none;
   }
   .nav-links {
+    display: flex;
     flex-direction: row;
     position: static;
     transform: translateY(0);
@@ -560,9 +605,16 @@ footer {
   margin-top: auto;
   position: fixed;
   bottom: 0;
+  height: 100px;
 }
 
-footer::after,
+/* footer::after,
 footer::before {
   height: 100px;
+} */
+
+/* Additional: */
+
+.invert {
+  filter: invert(100%);
 }
