--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -189,7 +189,7 @@ small {
 .btn {
   color: hsl(var(--white));
   text-decoration: none;
-  padding: var(--size-2) var(--size-fluid-4);
+  padding: var(--size-2) var(--size-fluid-3);
   border-radius: var(--radius-1);
   cursor: pointer;
 }
@@ -424,8 +424,8 @@ header {
   border-radius: 50%;
 }
 
-.review-content {
-  max-width: 80%;
+.review--content {
+  max-width: 75%;
 }
 
 .review-btn {
@@ -440,7 +440,7 @@ header {
   padding: var(--size-1);
   width: var(--size-fluid-4);
   cursor: pointer;
-  transition: all 300ms var(--ease-squish-2);
+  transition: all 100ms var(--ease-in-out-2);
 }
 
 .review-btn--prev {
@@ -477,6 +477,7 @@ header {
   padding: 0.3rem;
   height: var(--size-fluid-1);
   cursor: pointer;
+  aspect-ratio: 1 / 1;
 }
 
 .indicator.active {
