--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -424,8 +424,8 @@ header {
   border-radius: 50%;
 }
 
-.review--content {
-  max-width: 75%;
+.review-content {
+  max-width: 71%;
 }
 
 .review-btn {
