--- a/src/components/Reviews.astro
+++ b/src/components/Reviews.astro
@@ -15,8 +15,8 @@ import "../styles/global.css";
       <img
         src="/chevron-left.svg"
         alt="next review"
-        width="50"
-        height="50"
+        width="40"
+        height="40"
         loading="lazy"
         class="invert"
       />
@@ -33,7 +33,7 @@ import "../styles/global.css";
               loading="lazy"
               class="review-avatar"
             />
-            <p class="review--content">{review?.content}</p>
+            <p class="review-content">{review?.content}</p>
             <p class="review--name text-gradient">{review?.name}</p>
           </div>
         ))
@@ -49,7 +49,7 @@ import "../styles/global.css";
               loading="lazy"
               class="review-avatar"
             />
-            <p class="review--content">{review?.content}</p>
+            <p class="review-content">{review?.content}</p>
             <p class="review--name text-gradient">{review?.name}</p>
           </div>
         ))
@@ -65,7 +65,7 @@ import "../styles/global.css";
               loading="lazy"
               class="review-avatar"
             />
-            <p class="review--content">{review?.content}</p>
+            <p class="review-content">{review?.content}</p>
             <p class="review--name text-gradient">{review?.name}</p>
           </div>
         ))
@@ -88,8 +88,8 @@ import "../styles/global.css";
       <img
         src="/chevron-right.svg"
         alt="next review"
-        width="50"
-        height="50"
+        width="40"
+        height="40"
         loading="lazy"
         class="invert"
       />
