--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -5,9 +5,8 @@ import "../styles/global.css";
 import { Icon } from "astro-icon/components";
 import Services from "../components/Services.astro";
 import Reviews from "../components/Reviews.astro";
-
-// Welcome to Astro! Wondering what to do next? Check out the Astro documentation at https://docs.astro.build
-// Don't want to use any of this? Delete everything in this file, the `assets`, `components`, and `layouts` directories, and start fresh.
+import Pricing from "../components/Pricing.astro";
+import Clients from "../components/Clients.astro";
 ---
 
 <Layout>
@@ -24,8 +23,6 @@ import Reviews from "../components/Reviews.astro";
   </section>
   <Services />
   <Reviews />
-  <!-- <div style="background-color: red; height: 100px; width: 100%;"></div>
-  <div style="background-color: blue; height: 100px; width: 100%;"></div>
-  <div style="background-color: green; height: 100px; width: 100%;"></div> -->
-  <!-- <div style="background-color: yellow; height: 100px; width: 100%;"></div> -->
+  <Pricing />
+  <Clients />
 </Layout>
