--- a/src/styles/global.css
+++ b/src/styles/global.css
@@ -131,6 +131,14 @@ svg {
   background-clip: text;
 }
 
+.featured .text-gradient-icon {
+  mask: linear-gradient(
+    to right,
+    hsl(var(--accent2)),
+    hsl(var(--accent3)) 99.9%
+  );
+}
+
 .h1 {
   font-size: var(--font-size-fluid-3);
   font-weight: 600;
@@ -496,6 +504,7 @@ header {
   gap: var(--size-3);
   align-items: center;
   justify-content: center;
+  width: 100%;
 }
 
 .pricing-container::before,
@@ -524,12 +533,17 @@ header {
   text-transform: uppercase;
   text-align: center;
   border-radius: var(--size-2);
-  padding: 0 var(--size-2);
+  padding-top: calc(var(--size-2) * 0.5);
+  padding-bottom: calc(var(--size-2) * 0.2);
+  padding-left: calc(var(--size-2) * 1);
+  padding-right: calc(var(--size-2) * 1);
+  color: hsl(var(--bkg));
+  font-weight: bold;
 }
 
 @media screen and (min-width: 1075px) {
   .pricing-card.featured {
-    transform: scale(1.15);
+    transform: scale(1.12);
     border: 4px solid hsl(var(--accent2));
     padding: var(--size-5) var(--size-6) var(--size-3);
     margin: 2rem 0;
@@ -550,6 +564,7 @@ header {
   font-size: var(--font-size-00);
   border-radius: var(--size-2);
   padding: 0 var(--size-2);
+  padding-top: calc(var(--size-2) * 0.3);
 }
 
 .pricing-card-description {
