--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,6 +7,7 @@ import Services from "../components/Services.astro";
 import Reviews from "../components/Reviews.astro";
 import Pricing from "../components/Pricing.astro";
 import Clients from "../components/Clients.astro";
+import CTA from "../components/CTA.astro";
 ---
 
 <Layout>
@@ -25,4 +26,5 @@ import Clients from "../components/Clients.astro";
   <Reviews />
   <Pricing />
   <Clients />
+  <CTA />
 </Layout>
