mobile style improvements

--- a/src/components/Services.astro
+++ b/src/components/Services.astro
@@ -15,7 +15,7 @@ import "../styles/global.css";
             width="80"
             height="80"
             loading="lazy"
-            class="invert"
+            class="invert invert2"
           />
           <h3 style="margin-top: 20px; margin-bottom: 20px">{service.name}</h3>
           <p class="text-muted">{service.content}</p>
